# wialonpy

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.en.md  README.md  README.ru.md  pyproject.toml  setup.py  tox.ini
docs/: authentication.md
tests/: test_utils.py
wialonpy/: __init__.py  utils.py
