[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wialonpy"
version = "0.1.8"
description = "A lightweight Python wrapper for the Wialon API by Gurtam"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Viacheslav Shambazov", email = "shambazov@gmail.com" }
]
dependencies = [
    "requests",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wialonpy"]

[project.urls]
Homepage = "https://github.com/slv177/wialonpy"
Repository = "https://github.com/slv177/wialonpy"
